Fixed text on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -1575,3 +1575,9 @@ _:-ms-lang(x), .parallax { background-size: auto 130%; }
 		transform: scale(1) rotate(0deg);
 	}
 }
+@media (max-width: 767.98px) {
+	.sp-container h2 {
+		font-size: 50px;
+		line-height: 60px;
+	}
+}
